--- a/client/src/components/ContestsContainer/ContestContainer.module.sass
+++ b/client/src/components/ContestsContainer/ContestContainer.module.sass
@@ -14,3 +14,12 @@
   width: 100%
   margin: 0 auto
   color: #4e618d
+
+.emptyNotification
+  font-size: 18px
+  text-align: center
+  padding: 10px
+  font-weight: 600
+  width: 100%
+  margin: 0 auto
+  color: #4e618d
