--- a/client/src/components/HowItWorks/FAQSection/Accordion/Accordion.module.sass
+++ b/client/src/components/HowItWorks/FAQSection/Accordion/Accordion.module.sass
@@ -1,37 +1,34 @@
 .faqAccordion
+  margin-bottom: 16px
+  color: #19184a
   border: 1px solid #f3f5fe
   border-radius: 16px
   transition: all ease .5s
-  color: #19184a
-  margin-bottom: 16px
   
-
   &:hover
     border: 1px solid #307DF6
 
     .faqCaption
       background-color: rgba(48, 125, 246, .1)
 
-      
-    
   .faqCaption
+    position: relative
     padding: 24px 70px 24px 24px
     font-size: 20px
-    position: relative
     font-weight: 700
-    cursor: pointer
     border-radius: 16px
+    cursor: pointer
 
     &::before
-      width: 25px
-      height: 25px
       content: ""
-      display: block
-      background-repeat: no-repeat
       position: absolute
       top: 50%
       right: 30px
+      display: block
+      width: 25px
+      height: 25px
       margin: -12px 0 0 0
+      background-repeat: no-repeat
       background-image: url(https://www.atom.com/html/html/html/static_images/icon-plus.svg)
       background-position: center center
 
@@ -44,20 +41,23 @@
     .text
       padding: 20px 24px 30px 24px
       font-size: 16px
-      line-height: 1.5
       font-weight: 400
+      line-height: 1.5
 
       ul
-        list-style: disc
         margin: 10px 0 0 30px
+        list-style: disc
 
       a
         color: white
 
-    
-
-
 .active
-  background-color: #307DF6
-  border: 0
   color: white !important
+  border: 0
+  background-color: #307DF6
+
+  .faqCaption
+    background-color: rgba(48, 125, 246, .1)
+
+    &::before
+      background-image: url(https://www.atom.com/html/html/html/static_images/icon-close.svg)
