--- a/client/src/components/HowItWorks/StepsSection/StepsItem/StepsItem.module.sass
+++ b/client/src/components/HowItWorks/StepsSection/StepsItem/StepsItem.module.sass
@@ -1,21 +1,27 @@
 .stepsItem
-  box-shadow: 0 16px 32px rgb(0 0 0 / .04)
-  padding: 25px
-  border-radius: 24px
   position: relative
-  background-color: #fff
+  padding: 25px
   flex: 1
+  box-shadow: 0 16px 32px rgb(0 0 0 / .04)
+  border-radius: 24px
+  background-color: #fff
+
+  @media (max-width: 766px)
+    padding: 10px
+
+  @media (max-width: 575px)
+    min-height: 230px
 
   .stepNumber
     display: inline-block
-    font-size: 14px
+    margin-bottom: 15px
+    padding: 0 15px
     color: #fff
+    font-size: 14px
     font-weight: 700
+    line-height: 32px
     background-color: #4942F3
     border-radius: 20px
-    line-height: 32px
-    padding: 0 15px
-    margin-bottom: 15px
 
   p
     color: #828282
@@ -28,9 +34,3 @@
     top: 50%
     left: 100%
     margin: -2px 0 0 -14px
-
-    @media (max-width: 992px)
-      top: 100%
-      left: 50%
-      transform: rotateZ(90deg)
-      margin: -8px 0 0 -14px
