--- a/client/src/components/HowItWorks/StepsSection/StepsSection.module.sass
+++ b/client/src/components/HowItWorks/StepsSection/StepsSection.module.sass
@@ -8,8 +8,8 @@
     @include c.grayContainer
     
     .titleContainer
-      text-align: center
       margin-bottom: 75px
+      text-align: center
 
       img
         width: 70px
@@ -28,5 +28,13 @@
         img
           display: none
 
-      @media (max-width: 992px)
-        flex-direction: column
+      @media (max-width: 991px)
+        display: grid
+        grid-template-columns: repeat(2, 1fr)
+        grid-gap: 30px
+
+      @media (max-width: 766px)
+        grid-gap: 20px
+
+      @media (max-width: 575px)
+        grid-template-columns: 1fr
